--- a/styles.css
+++ b/styles.css
@@ -11,3 +11,8 @@ body {background-color: blue;
         text-transform: uppercase
     
     }
+
+    button {
+        height: 50px;
+        width: 100px;
+    }
